plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.115'
    id 'idea'
    id 'io.github.themrmilchmann.curseforge-publish' version '0.8.0'
}

version = mod_version
group   = mod_group_id

base {
    archivesName = mod_id
}

java {
    // Mojang ships Java 21 for 1.21.x; target 21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    // Needed for Parchment mappings
    maven { url = 'https://maven.parchmentmc.net' }
    // NeoForged artifacts
    maven { url = 'https://maven.neoforged.net/releases' }
    // World Edit
    maven { url = "https://maven.enginehub.org/repo/" }
    // General deps
    mavenCentral()
    // mavenLocal() // enable if you install local jars
}

/** =========================
 *  NeoForge / ModDevGradle
 *  ========================= */
neoForge {
    // NeoForge coordinate from gradle.properties
    version = project.neo_version

    // Only wire Parchment if both properties exist & are non-empty
    if (project.hasProperty('parchment_mappings_version')
            && project.hasProperty('parchment_minecraft_version')
            && "${project.parchment_mappings_version}".trim()
            && "${project.parchment_minecraft_version}".trim()) {
        parchment {
            mappingsVersion  = project.parchment_mappings_version
            minecraftVersion = project.parchment_minecraft_version
        }
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // Client datagen -> assets/*
        clientData {
            clientData()
            gameDirectory = project.file('run-data')
            programArguments.addAll '--mod', project.mod_id,
                    '--all',
                    '--output', file('src/generated/resources_client/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // Server datagen -> data/*
        serverData {
            serverData()
            gameDirectory = project.file('run-data')
            programArguments.addAll '--mod', project.mod_id,
                    '--all',
                    '--output', file('src/generated/resources_server/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }


    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

/** ==========================================
 *  Resources / datagen & duplicates handling
 *  ========================================== */
sourceSets {
    main {
        resources {
            srcDir 'src/generated/resources_client'
            srcDir 'src/generated/resources_server'

            exclude 'assets/cosmicdungeon/models/item/vowkeeper.json'
            exclude 'assets/cosmicdungeon/models/item/aegis_of_truth.json'
            exclude 'assets/cosmicdungeon/models/item/reinforced_iron_slab.json'
            exclude 'assets/cosmicdungeon/models/item/shield_of_the_deep.json'
            exclude 'assets/cosmicdungeon/models/item/shield_of_tidal_force.json'
            exclude 'assets/cosmicdungeon/models/item/worked_plank.json'
        }
    }
}


// Keep-first on duplicate resources
tasks.processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

/** ==========================================
 *  Local optional runtime deps (not published)
 *  ========================================== */
configurations {
    localRuntime
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    compileOnly "com.sk89q.worldedit:worldedit-core:7.3.17"
    compileOnly "com.sk89q.worldedit:worldedit-neoforge-mc1.21.10:7.3.17"
}

/** ==========================================
 *  Expand properties into mod metadata
 *  ========================================== */
def generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties(replaceProperties)
    expand(replaceProperties)
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include generated mod metadata in resources
sourceSets.main.resources.srcDir(generateModMetadata)
// Make IDE sync generate the metadata each reload
neoForge.ideSyncTask(generateModMetadata)

/** =========================
 *  Build / IDE niceties
 *  ========================= */
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

/** =========================
 *  CurseForge publishing
 *  (safe if token missing)
 *  ========================= */
def cfToken = providers.gradleProperty('curseforgeApiToken').orNull
def cfProjectId = providers.gradleProperty('curseforgeProjectId').orNull

if (cfToken && cfProjectId) {
    curseforge {
        apiToken = cfToken
        publications {
            named('neoForge') {
                projectId = cfProjectId
                artifacts.named('main') { /* default jar */ }
            }
        }
    }
} else {
    logger.lifecycle("[curseforge] Token or projectId not provided; publish task will be skipped.")
}
